# advent-of-code-2020

./: README.md
.github/workflows/: rust.yml
day1/: Cargo.toml  main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml  foo
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day2/: Cargo.toml  main.rs
day3/: Cargo.toml  main.rs
day4/: Cargo.toml  main.rs
day5/: Cargo.toml  main.rs
day6/: Cargo.toml  main.rs
day7/: Cargo.toml  main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
