[package]
name = "day4"
version = "0.1.0"
authors = ["Keiichi Watanabe <udon.watanabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
regex = "1.4.2"
lazy_static = "1.4.0"

[[bin]]
name = "day4"
path = "main.rs"
