[package]
name = "day6"
version = "0.1.0"
authors = ["Keiichi Watanabe <udon.watanabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

[[bin]]
name = "day6"
path = "main.rs"
